--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 sudo: false
 language: go
 go:
-  - 1.5
   - 1.6
+  - 1.7
   - tip
 before_install:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
 script:
+  - go test -v
   - $HOME/gopath/bin/goveralls -service=travis-ci
