--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - go get golang.org/x/tools/cmd/cover
 script:
   - go test -v
-  - goveralls -service=travis-ci
+  - goveralls -service travis-ci
 branches:
   only:
     - master
